[package]
name = "phantom_keystroke"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust application for keyboard input obfuscation"
license = "MIT"

[dependencies]
crossterm = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.33"
log = "0.4.20"
simplelog = "0.12.1"
toml = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
unic-langid = "0.9.1"
async-trait = "0.1.77"
libloading = "0.8.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
backoff = { version = "0.4.0", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.10.0"
mockall = "0.12.1"
serial_test = "2.0.0"

[features]
default = []
plugin = []
